fix: edited cors config